<resources>
    <string name="app_name">7 minutes workout</string>
    <string name="start_image">start image</string>
    <string name="start">start</string>
    <string name="exercise_activity">exercise activity</string>
    <string name="get_started">Get ready for</string>
    <string name="upcoming_exercise_is">upcoming exercise is</string>
    <string name="_10">10</string>
    <string name="are_you_sure_you_want_to_quit">are you sure you want to quit?</string>
    <string name="this_will_stop_your_workout_you_have_come_this_far">this will stop your workout, you have come this far</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="bmi">BMI</string>
    <string name="weight_in_kg">weight (in kg)</string>
    <string name="height_in_cm">height (in cm)</string>
    <string name="cal_bmi">Cal BMI</string>
    <string name="your_bmi">Your BMI</string>
    <string name="your_bmi_is">Your BMI is</string>
    <string name="history">History</string>
</resources>