<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_vertical"
    >

    <TextView
        android:id="@+id/tvSure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/are_you_sure"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/this_will_stop_your_workout_you_have_come_this_far"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSure" />

    <TextView
        android:id="@+id/tvQuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_quit"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFar" />

    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        app:layout_constraintTop_toBottomOf = "@+id/tvQuit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation = "horizontal"
        android:layout_marginStart = "16dp"
        android:layout_marginEnd = "16dp"
        >
        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight = "1"
            android:layout_marginEnd = "10dp"
            android:backgroundTint = "@color/purple_700"
            android:textColor = "@color/white"
            android:text="@string/ok"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id = "@+id/btnNo"
            tools:text  = "hii"
            android:layout_width = "0dp"
            android:layout_height = "48dp"
            android:layout_weight = "1"
            android:text = "@string/cancel"
            android:backgroundTint = "@color/purple_700"
            android:textColor = "@color/white"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>