<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMIActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBMI"
        android:layout_width = "match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/light_green"
        android:theme="@style/ToolbarTheme"
        app:titleTextColor="@color/white"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id = "@+id/tiWeight"
        app:layout_constraintTop_toBottomOf = "@+id/toolbarBMI"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight = "20dp"
        android:layout_marginLeft = "20dp"
        android:layout_marginTop = "20dp"
        app:boxStrokeColor = "@color/light_green"
        app:hintTextColor = "@color/purple_700"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id = "@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:inputType = "numberDecimal"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id = "@+id/tiHeight"
        app:layout_constraintTop_toBottomOf = "@+id/tiWeight"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight = "20dp"
        android:layout_marginLeft = "20dp"
        android:layout_marginTop = "20dp"
        app:boxStrokeColor = "@color/light_green"
        app:hintTextColor = "@color/purple_700"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id = "@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_cm"
            android:inputType = "numberDecimal"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id = "@+id/llBMI"
        android:layout_marginTop="20dp"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        app:layout_constraintTop_toBottomOf = "@+id/tiHeight"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        android:orientation = "vertical"
        android:visibility="invisible"
        tools:visibility = "visible"
        >
        <TextView
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:text = "@string/your_bmi_is"
            android:gravity = "center"
            />
        <TextView
            android:layout_marginTop = "10dp"
            android:id = "@+id/tvBMIval"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            tools:text = "25.21"
            android:gravity = "center"
            />

        <TextView
            android:layout_marginTop = "10dp"
            android:id = "@+id/tvBmiLabel"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            tools:text = "Severe weight loss"
            android:gravity = "center"
            />
        <TextView
            android:layout_marginTop = "10dp"
            android:id = "@+id/tvBMIRec"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            tools:text = "OOPs you really need to take care of yourself! workout maybe"
            android:gravity = "center"
            />
    </LinearLayout>

    <Button
        android:id = "@+id/btnCalBMI"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        app:layout_constraintTop_toBottomOf = "@+id/llBMI"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop = "20dp"
        android:layout_marginRight = "20dp"
        android:backgroundTint= "@color/light_green"
        android:text = "@string/cal_bmi"
        android:textStyle = "bold"
        android:textColor = "@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>